[package]
name = "aquamarine"
version = "0.2.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }
particle-services = { workspace = true }
particle-builtins = { workspace = true }

now-millis = { workspace = true }
fluence-libp2p = { workspace = true }
config-utils = { workspace = true }
particle-args = { workspace = true }
control-macro = { workspace = true }
fs-utils = { workspace = true }
peer-metrics = { workspace = true }
particle-execution = { workspace = true }
key-manager = { workspace = true }

avm-server = { workspace = true }
libp2p = { workspace = true }
fluence-keypair = { workspace = true }

futures = { workspace = true }
log = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = "0.4.31"
base64 = { workspace = true }
thiserror = { workspace = true }
humantime = "2.1.0"
anyhow = "1.0.75"
eyre = { workspace = true }
bytesize = "1.3.0"
async-trait = "0.1.74"
health = { workspace = true }
bs58 = { workspace = true }
