[package]
name = "aquamarine"
version = "0.2.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }
particle-services = { workspace = true }

now-millis = { workspace = true }
fluence-libp2p = { workspace = true }
config-utils = { workspace = true }
particle-args = { workspace = true }
control-macro = { workspace = true }
fs-utils = { workspace = true }
peer-metrics = { workspace = true }
particle-execution = { workspace = true }
workers = { workspace = true }
types = { workspace = true }

avm-server = { workspace = true }
libp2p = { workspace = true }
fluence-keypair = { workspace = true }

futures = { workspace = true }
log = { workspace = true }

tokio = { workspace = true, features = ["fs", "rt"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = "0.4.33"
base64 = { workspace = true }
bs58 = { workspace = true }
thiserror = { workspace = true }
humantime = "2.1.0"
anyhow = "1.0.79"
eyre = { workspace = true }
bytesize = "1.3.0"
async-trait = { workspace = true }
health = { workspace = true }
config = { version = "0.13.4", features = [] }
enum_dispatch = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
