[package]
name = "fluence"
version = "0.1.3"  # remember to update html_root_url
description = "Fluence backend SDK for developing backend applications for the Fluence network"
documentation = "https://docs.rs/fluence/"
repository = "https://github.com/fluencelabs/fluence/tree/master/backend-sdk"
authors = ["Fluence Labs"]
readme = "Readme.md"
keywords = ["fluence", "sdk", "webassembly"]
categories = ["api-bindings", "wasm"]
license = "Apache-2.0"
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs] # https://docs.rs/about
all-features = true

[lib]
path = "src/lib.rs"

[dependencies]
fluence-sdk-macro = { path = "crates/macro", version = "=0.1.3" }
fluence-sdk-main = { path = "crates/main", version = "=0.1.3" }

[features]
# Turn on a compilation for the module that contains Wasm logger realization.
wasm_logger = ["fluence-sdk-main/wasm_logger"]

# Turn on a compilation for the module that contains the standard implementation of allocate/deallocate functions.
export_allocator = ["fluence-sdk-main/export_allocator"]

[workspace]
members = [
  "crates/main",
  "crates/macro",
  ]
