[package]
name = "backend_network"
version = "0.1.0"
authors = ["mike"]
edition = "2018"

[dependencies]
libp2p = "0.13.1"
libp2p-core = "0.13.1"
libp2p-ping = "0.13.1"
libp2p-identify = "0.13.1"
libp2p-swarm = "0.3.0"

futures = "0.1"

tokio = "0.1"
tokio-stdin-stdout = "0.1"

lazy_static = "1.4.0"
env_logger = "0.7.1"
