[package]
name = "fluence"
version = "0.1.0" # don't forget to change in README.md too
authors = ["Fluence Labs"]
publish=false

[profile.release]
debug = false
lto = true

[dependencies]
clap = "2.32.0"
indicatif = "0.9.0"
console = "0.6.2"
reqwest = "0.9.3"
hex = "0.3.2"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ethereum-types-serialize = "0.2.1"
derive-getters = "0.0.7"
ethcore-transaction = { git = "https://github.com/paritytech/parity.git" }
ethkey = { git = "https://github.com/paritytech/parity.git" }
rlp = "0.3.0"
base64 = "0.10.0"

fixed-hash = "0.3.0"
ethabi = "6.1.0"
error-chain = "0.12.0"

parity-wasm = "0.35"

[dev-dependencies]
rand = "0.6.0"
