[package]
name = "connection-pool"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
particle-protocol = { path = "../particle-protocol"}
fluence-libp2p = { path = "../crates/libp2p" }
peer-metrics = { path = "../crates/peer-metrics" }

libp2p = { workspace = true }

futures = { workspace = true }
log = { workspace = true }
serde = "1.0.145"
async-std = { workspace = true }
itertools = "0.10.5"

[dev-dependencies]
parking_lot = { workspace = true }
