[package]
name = "connection-pool"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }
fluence-libp2p = { workspace = true }
peer-metrics = { workspace = true }

libp2p = { workspace = true }

futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
async-std = { workspace = true }
itertools = "0.10.5"

[dev-dependencies]
parking_lot = { workspace = true }
