[package]
name = "fluence-connection-pool"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }
fluence-libp2p = { workspace = true }
peer-metrics = { workspace = true }

libp2p = { workspace = true }

futures = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = {workspace = true  }
itertools = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
