[package]
name = "faas-api"
version = "0.0.5"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
trust-graph = { path = "../trust-graph" }
fluence-libp2p = { path = "../crates/libp2p" }
libp2p = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "weighted_routing" }
parity-multiaddr = "0.9.0"
multihash ="0.11.0"
futures = "0.3.4"
futures-util = "0.3.4"
async-std = "1.5.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
bs58 = "0.3.0"
failure = "0.1.6"
base64 = "0.11.0"
log = "0.4.8"
url = { version = "2.1.1", features = ["serde"] }
once_cell = "1.3.1"

[dev-dependencies]
rand = "0.7.3"
