[workspace]
members = [
    "server",
    "client/rust-libp2p",
    "trust-graph",
]
exclude = [
    "client/js-websocket/utils-wasm",
]

[patch.crates-io]
libp2p = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "debug_janus" }
libp2p-core = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "debug_janus" }
parity-multiaddr = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "debug_janus" }

[patch.'ssh://git@github.com/fluencelabs/arqada.git']
trust-graph = { path = "trust-graph" }
