[workspace]
members = [
    "server",
    "client/rust-libp2p",
    "client/janus-ipfs",
    "trust-graph",
    "crates/libp2p",
    "crates/ctrlc-adapter",
    "faas-api"
]
exclude = [
    "client/js-websocket/utils-wasm",
]

[patch.crates-io]
libp2p = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "peer_id_topubkey_copy" }
libp2p-core = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "peer_id_topubkey_copy" }
parity-multiaddr = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "peer_id_topubkey_copy" }

[patch.'ssh://git@github.com/fluencelabs/arqada.git']
trust-graph = { path = "trust-graph" }
