[package]
name = "nox"
version = "0.13.2"
authors = ["Fluence Labs"]
description = "Node implementing peer functionality in the Fluence p2p network"
edition = "2021"

[features]
dhat-heap = ["dep:dhat"]

[dependencies]
particle-protocol = { workspace = true }
particle-builtins = { workspace = true }
particle-execution = { workspace = true }
connection-pool = { workspace = true }
script-storage = { workspace = true }
aquamarine = { workspace = true }
sorcerer = { workspace = true }
health = { workspace = true }
dhat = { version = "0.3.2", optional = true }

serde_json = { workspace = true }
fluence-libp2p = { workspace = true }
server-config = { workspace = true }
config-utils = { workspace = true }
kademlia = { workspace = true }
air-interpreter-fs = { workspace = true }
fs-utils = { workspace = true }
peer-metrics = { workspace = true }
spell-event-bus = { workspace = true }
key-manager = { workspace = true }
system-services = { workspace = true }

fluence-keypair = { workspace = true }

avm-server = { workspace = true }
air-interpreter-wasm = { workspace = true }

libp2p = { workspace = true }
libp2p-metrics = { workspace = true }
libp2p-swarm = { workspace = true }
libp2p-connection-limits = { workspace = true }
prometheus-client = { workspace = true }

futures = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing"] }
tokio-stream = { workspace = true }
parking_lot = { workspace = true }

humantime-serde = { workspace = true }

log = { workspace = true }
tracing-log = { version = "0.1.3" }
console-subscriber = { workspace = true, features = ["parking_lot"] }
axum = { workspace = true, features = ["macros"] }
itertools = { workspace = true }
eyre = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
tracing-subscriber = { workspace = true, features = ["parking_lot", "env-filter"] }
tracing-logfmt = "0.3.2"
tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.12.0"

[dev-dependencies]
parking_lot = { workspace = true }
maplit = { workspace = true }
serde_json = { workspace = true }
fstrings = { workspace = true }
serde = { workspace = true }
multihash = { workspace = true }
blake3 = "1.4.1"
rand = "0.8.5"
bs58 = { workspace = true }
connected-client = { path = "../crates/connected-client" }
log-utils = { workspace = true }
hyper = { workspace = true }

[[bench]]
name = "network_api_bench"
harness = false

[[bench]]
name = "aquamarine_bench"
harness = false
