[package]
name = "nox"
version = "0.18.1"
authors = ["Fluence Labs"]
description = "Node implementing peer functionality in the Fluence p2p network"
edition = "2021"

[features]
dhat-heap = ["dep:dhat"]

[dependencies]
particle-protocol = { workspace = true }
particle-builtins = { workspace = true }
particle-execution = { workspace = true }
connection-pool = { workspace = true }
aquamarine = { workspace = true }
sorcerer = { workspace = true }
health = { workspace = true }
dhat = { version = "0.3.2", optional = true }

serde_json = { workspace = true }
fluence-libp2p = { workspace = true }
server-config = { workspace = true }
config-utils = { workspace = true }
kademlia = { workspace = true }
air-interpreter-fs = { workspace = true }
fs-utils = { workspace = true }
peer-metrics = { workspace = true }
spell-event-bus = { workspace = true }
workers = { workspace = true }
system-services = { workspace = true }
spell-service-api = { workspace = true }
chain-listener = { workspace = true }
chain-connector = { workspace = true }

fluence-keypair = { workspace = true }

avm-server = { workspace = true }
air-interpreter-wasm = { workspace = true }

libp2p = { workspace = true, features = ["metrics"] }
libp2p-metrics = { workspace = true }
libp2p-swarm = { workspace = true }
libp2p-connection-limits = { workspace = true }
prometheus-client = { workspace = true }

futures = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing"] }
tokio-stream = { workspace = true }
parking_lot = { workspace = true }

humantime-serde = { workspace = true }

log = { workspace = true }
tracing-log = { version = "0.2.0" }
console-subscriber = { workspace = true, features = ["parking_lot"] }
axum = { workspace = true, features = ["macros"] }
itertools = { workspace = true }
eyre = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
tracing-subscriber = { workspace = true, features = ["parking_lot", "env-filter"] }
tracing-logfmt = "0.3.3"
tracing-opentelemetry = "0.22.0"
opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.14.0"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
once_cell = { workspace = true }
config = "0.13.4"
tonic = "0.9.2"

[dev-dependencies]
parking_lot = { workspace = true }
maplit = { workspace = true }
serde_json = { workspace = true }
fstrings = { workspace = true }
serde = { workspace = true }
multihash = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
bs58 = { workspace = true }
connected-client = { path = "../crates/connected-client" }
log-utils = { workspace = true }
reqwest = { workspace = true }


[[bench]]
name = "network_api_bench"
harness = false

[[bench]]
name = "aquamarine_bench"
harness = false
