[package]
name = "particle-actors"
version = "0.0.1"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
particle-protocol = { path = "../particle-protocol"}

fluence-libp2p = { path = "../crates/libp2p" }
config-utils = { path = "../crates/config-utils" }
host-closure = { path = "../crates/host-closure" }
aquamarine-vm = { git = "https://github.com/fluencelabs/fce", branch = "facede_interface" }

libp2p = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "master" }

futures = "0.3.5"
log = "0.4.11"
async-std = { version = "1.6.5", features = ["unstable"] }
serde_json = "1.0.57"
parking_lot = "0.11.0"
chrono = "0.4.19"
